--- a/index.html
+++ b/index.html
@@ -14,6 +14,28 @@
 		<p>Rellena tu CV</p>
 	</section>
 	<section class="forms">
+<div>
+		<form method="post" class="form-skills">
+			<div class="box-skills">
+				<label for="skills">Habilidades</label>
+				<input id="skills" type="text" name="skills" class="skills">
+			</div>
+			<div class="box-nivel">
+				<label for="nivel">Nivel</label>
+				<input id="nivel" type="text" name="nivel" class="nivel">
+			</div>
+		</form>
+</div>
+		<form method="post" class="">
+			<div class="box-otherdetails">
+				<label for="details">Datos de interés</label>
+				<input id="details" type="text" name="details" class="details">
+			</div>
+			<div class="box-nivel">
+				<label for="nivel">Nivel</label>
+				<input id="nivel" type="text" name="nivel" class="nivel">
+			</div>
+					</form>
 	</section>
 	<main></main>
 	<footer class="footer">
