form job without styles

--- a/index.html
+++ b/index.html
@@ -14,6 +14,54 @@
 		<p>Rellena tu CV</p>
 	</section>
 	<section class="forms">
+		<form method="post" class="">
+			<div>
+				<label class="" for="job">Puesto de trabajo:</label>
+				<input class="" id="job" type="text" name="job">
+			</div>
+			<div>
+				<label class="" for="job-charge">Cargo:</label>
+				<input class="" id="job-charge" type="text" name="job-charge">
+			</div>
+			<div>
+				<label class="" for="job-bussines">Empresa:</label>
+				<input class="" id="job-bussines" type="text" name="job-bussines">
+			</div>
+			<div>
+				<div>
+					<label class="" for="job-month-start">Mes de inicio</label>
+					<select id="job-month-start" name="job-month-start">
+
+					</select>
+				</div>
+				<div>
+					<label class="" for="job-year-start">Año de inicio</label>
+					<select id="job-year-start" name="job-year-start">
+
+					</select>
+				</div>
+			</div>
+			<div>
+				<div>
+					<label class="" for="job-month-end">Mes de final</label>
+					<select id="job-month-end" name="job-month-end">
+
+					</select>
+				</div>
+				<div>
+					<label class="" for="job-year-end">Año de final</label>
+					<select id="job-year-end" name="job-year-end">
+
+					</select>
+				</div>
+			</div>
+			<div class="job-extract">
+				<label class="" for="messjob-extract">
+					Mensaje
+				</label>
+				<textarea class="" id="job-extract" name="job-extract" rows="8" cols="40"></textarea>
+			</div>
+		</form>
 	</section>
 	<main></main>
 	<footer class="footer">
