--- a/prev.html
+++ b/prev.html
@@ -21,6 +21,7 @@
 					<li class="prev-contactdetails-email"></li>
 					<li class="prev-contactdetails-phone"></li>
 					<li class="prev-contactdetails-socialmedia"></li>
+					<li class="prev-contactdetails-proffession"></li>
 				</ul>
 		</section>
 
