add form skills and details

--- a/index.html
+++ b/index.html
@@ -55,37 +55,37 @@
 					</select>
 				</div>
 			</div>
+
 			<div class="job-extract">
-				<label class="" for="messjob-extract">
-					Mensaje
-				</label>
+				<label class="" for="messjob-extract">Mensaje</label>
 				<textarea class="" id="job-extract" name="job-extract" rows="8" cols="40"></textarea>
 			</div>
-		</form>
-<div>
-		<form method="post" class="form-skills">
+
 			<div class="box-skills">
 				<label for="skills">Habilidades</label>
 				<input id="skills" type="text" name="skills" class="skills">
 			</div>
+
 			<div class="box-nivel">
 				<label for="nivel">Nivel</label>
 				<input id="nivel" type="text" name="nivel" class="nivel">
 			</div>
-		</form>
-</div>
-		<form method="post" class="">
+
 			<div class="box-otherdetails">
 				<label for="details">Datos de interés</label>
 				<input id="details" type="text" name="details" class="details">
 			</div>
+
 			<div class="box-nivel">
 				<label for="nivel">Nivel</label>
 				<input id="nivel" type="text" name="nivel" class="nivel">
 			</div>
-					</form>
+
+		</form>
 	</section>
+
 	<main></main>
+
 	<footer class="footer">
 		<p>Copyright &copy;NaN!</p>
 		<div class="up-button">
