--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 		<form method="post" class="" enctype="multipart/form-data">
 			<!-- Datos personales -->
 			<fieldset class="personaldetails-section">
-				<legend>Datos personales:</legend>
+				<div>
+					<legend>Datos personales</legend>
+				</div>
 				<label for="phto">Introduce tu foto</label>
 				<input type="file" name="photo" accept="image/*">
 				<label for="name">Nombre</label>
@@ -36,11 +38,16 @@
 				<input type="text" name="profession" required>
 			</fieldset>
 			<fieldset class="personaldetails">
-				<legend>Extracto:</legend>
+				<div>
+				<legend>Extracto</legend>
+				</div>
 				<textarea    name="comments"    rows="8"    cols="80"></textarea>
 			</fieldset>
 			<!-- experiencia laboral -->
 			<fieldset class="job-section">
+				<div>
+				<legend>Experiencia Laboral</legend>
+				</div>
 				<label class="" for="job">Puesto de trabajo:</label>
 				<input class="" id="job" type="text" name="job">
 				<label class="" for="job-charge">Cargo:</label>
@@ -60,6 +67,9 @@
 			</fieldset>
 			<!-- experiencia educativa -->
 			<fieldset class="education-section">
+				<div>
+				<legend>Educación</legend>
+				</div>
 				<label class="" for="education-studies">Titulación</label>
 				<input class="" type="text" id="education-studies" name="education-studies" required>
 				<label class="" for="education-type-studies">Tipo de estudios</label>
@@ -75,17 +85,27 @@
 			</fieldset>
 			<!-- habilidades -->
 			<fieldset class="skills-section">
+				<div>
+				<legend>Habilidades</legend>
+				</div>
 				<label for="skills">Habilidades</label>
 				<input id="skills" type="text" name="skills" class="skills">
-				<label for="nivel">Nivel</label>
-				<input id="nivel" type="text" name="nivel" class="nivel">
+				<label for="nivel1">Principiante</label>
+				<input id="nivel1" type="radio" name="nivel" class="nivel">
+				<label for="nivel2">Medio</label>
+				<input id="nivel2" type="radio" name="nivel" class="nivel">
+				<label for="nivel3">Experto</label>
+				<input id="nivel3" type="radio" name="nivel" class="nivel">
 			</fieldset>
 			<!-- otros datos-->
 			<fieldset class="details-section">
+				<div>
+				<legend>Otros datos de interés</legend>
+				<input type="button" value="rellenar" onclick="rellenar">
+				</div>
 				<label for="details">Datos de interés</label>
 				<input id="details" type="text" name="details" class="details">
-				<label for="nivel">Nivel</label>
-				<input id="nivel" type="text" name="nivel" class="nivel">
+
 			</fieldset>
 		</form>
 	</section>
