--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
 			<!-- Datos personales -->
 			<fieldset class="personaldetails-section">
 				<legend>Datos personales:</legend>
-				<label for="phto">Introduce tu foto</label>
-				<input type="file" name="photo" accept="image/*">
+				<label for="photo">Introduce tu foto</label>
+				<input id=photo type="file" name="photo" accept="image/*">
 				<label for="name">Nombre</label>
-				<input type="text" name="name" required>
+				<input id=name type="text" name="name" required>
 				<label for="surnames" required>Apellidos</label>
-				<input type="text" name="surnames">
+				<input id= surnames type="text" name="surnames">
 				<label for="email">Email</label>
-				<input type="email" name="email" required>
+				<input id=email type="email" name="email" required>
 				<label for="phone">Teléfono</label>
-				<input type="tel" name="phone">
+				<input id=tel type="tel" name="phone">
 				<label for="socialmedia">Redes Sociales</label>
-				<input type="text" name="socialmedia">
-				<label for="adress">Dirección</label>
-				<input type="text" name="address">
+				<input id=socialmedia type="text" name="socialmedia">
+				<label for="address">Dirección</label>
+				<input id= address type="text" name="address">
 				<label for="profession">Profesión</label>
-				<input type="text" name="profession" required>
+				<input id= profession type="text" name="profession" required>
 			</fieldset>
 			<fieldset class="personaldetails">
 				<legend>Extracto:</legend>
