add prompt education

--- a/index.html
+++ b/index.html
@@ -134,14 +134,16 @@
 		<section class="prev-education">
 			<h1 class="prev-titles">Formación académica</h1>
 				<ul class="prev-educationdetails">
-					<li class="prev-educationdetails-studies"></li>
-					<li class="prev-educationdetails-centre"></li>
-					<li class="prev-educationdetails-date"></li>
+					<li id="educationdetails-studies" class="prev-educationdetails-studies">Titulación:</li>
+					<li id="educationdetails-type-studies" class="prev-educationdetails-type-studies">Tipo de estudios:</li>
+					<li id="educationdetails-centre" class="prev-educationdetails-centre">Centro de estudios:</li>
+					<li class="prev-educationdetails-date">
 						<ul class="prev-educationdate">
-							<li class="prev-educationdate-start"></li>
-							<li class="prev-educationdate-end"></li>
+							<li id="educationdate-start" class="prev-educationdate-start">Año de inicio:</li>
+							<li id="educationdate-end" class="prev-educationdate-end">Año de finalización:</li>
 						</ul>
-					<li class="prev-educationdetails-otherdetails"></li>
+					</li>
+					<li id="educationdetails-description" class="prev-educationdetails-description">Descripción</li>
 				</ul>
 		</section>
 
