--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="styles/style.css">
+	<link rel="stylesheet" href="styles/cabecera.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Crea tu CV online</title>
 </head>
@@ -111,7 +112,7 @@
 			</fieldset>
 			<!-- experiencia educativa -->
 			<fieldset id=edufiel class="education-section">
-				
+
 				<legend>Educación</legend>
 
 				<label class="" for="education-studies">Titulación</label>
